--- a/package.json
+++ b/package.json
@@ -9,5 +9,7 @@
   "author": "John Zarek",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.2.1",
+    "jquery.marquee": "^1.5.0"
   }
 }
